--- a/analisis/limpieza.ipynb
+++ b/analisis/limpieza.ipynb
@@ -2063,8 +2063,8 @@
     "Vemos que tenemos una tabla con 5221 filas y 38 columnas que son:\n",
     "\n",
     "\n",
-    "- Temporada: Representa la temporada en la que se jugó el partido.\n",
-    "- #: Representa el número de jugador.\n",
+    "- 'Temporada': Representa la temporada en la que se jugó el partido.\n",
+    "- '#': Representa el número de jugador.\n",
     "- Jugador: Representa el nombre del jugador.\n",
     "- País: Representa el país del jugador.\n",
     "- Posc: Representa la posición del jugador.\n",
