--- a/analisis/limpieza.ipynb
+++ b/analisis/limpieza.ipynb
@@ -2065,41 +2065,41 @@
     "\n",
     "- 'Temporada': Representa la temporada en la que se jugó el partido.\n",
     "- '#': Representa el número de jugador.\n",
-    "- Jugador: Representa el nombre del jugador.\n",
-    "- País: Representa el país del jugador.\n",
-    "- Posc: Representa la posición del jugador.\n",
-    "- Equipo: Representa el equipo al que pertenece el jugador.\n",
-    "- Edad: Representa la edad del jugador.\n",
-    "- Nacimiento: Representa la fecha de nacimiento del jugador.\n",
-    "- PJ: Representa el número de partidos jugados por el jugador.\n",
-    "- Titular: Indica si el jugador fue titular en el partido.\n",
-    "- Mín 90 s: Representa los minutos jugados por el jugador.\n",
-    "- Gls.: Representa el número de goles marcados por el jugador.\n",
-    "- Ass: Representa el número de asistencias realizadas por el jugador.\n",
-    "- G+A: Representa la suma de goles y asistencias del jugador.\n",
-    "- G-TP: Representa el número de goles marcados desde el punto de penalti por el jugador.\n",
-    "- TP: Representa el número de penaltis lanzados por el jugador.\n",
-    "- TPint: Representa el número de penaltis convertidos por el jugador.\n",
-    "- TA: Representa el número de tarjetas amarillas recibidas por el jugador.\n",
-    "- TR: Representa el número de tarjetas rojas recibidas por el jugador.\n",
-    "- xG: Representa el valor esperado de goles del jugador.\n",
-    "- npxG: Representa el valor esperado de goles sin contar los goles de penalti del jugador.\n",
-    "- xAG: Representa el valor esperado de goles en contra del jugador.\n",
-    "- npxG+xAG: Representa la suma del valor esperado de goles sin contar los goles de penalti y el valor esperado de goles en contra del jugador.\n",
-    "- PrgC: Representa el número de pases completados por el jugador.\n",
-    "- PrgP: Representa el número de pases intentados por el jugador.\n",
-    "- PrgR: Representa el porcentaje de pases completados por el jugador.\n",
-    "- Gls90.: Representa el número de goles por cada 90 minutos jugados por el jugador.\n",
-    "- Ast90: Representa el número de asistencias por cada 90 minutos jugados por el jugador.\n",
-    "- G+A90: Representa la suma de goles y asistencias por cada 90 minutos jugados por el jugador.\n",
-    "- G-TP90: Representa el número de goles marcados desde el punto de penalti por cada 90 minutos jugados por el jugador.\n",
-    "- G+A-TP90: Representa la suma de goles y asistencias sin contar los goles de penalti por cada 90 minutos jugados por el jugador.\n",
-    "- xG90: Representa el valor esperado de goles por cada 90 minutos jugados por el jugador.\n",
-    "- xAG90: Representa el valor esperado de goles en contra por cada 90 minutos jugados por el jugador.\n",
-    "- xG+xAG90: Representa la suma del valor esperado de goles y el valor esperado de goles en contra por cada 90 minutos jugados por el jugador.\n",
-    "- npxG90: Representa el valor esperado de goles sin contar los goles de penalti por cada 90 minutos jugados por el jugador.\n",
-    "- npxG+xAG90: Representa la suma del valor esperado de goles sin contar los goles de penalti y el valor esperado de goles en contra por cada 90 minutos jugados por el jugador.\n",
-    "- Partidos: Representa el número de partidos jugados por el jugador.\n",
+    "- 'Jugador': Representa el nombre del jugador.\n",
+    "- 'País': Representa el país del jugador.\n",
+    "- 'Posc': Representa la posición del jugador.\n",
+    "- 'Equipo': Representa el equipo al que pertenece el jugador.\n",
+    "- 'Edad': Representa la edad del jugador.\n",
+    "- 'Nacimiento': Representa la fecha de nacimiento del jugador.\n",
+    "- 'PJ': Representa el número de partidos jugados por el jugador.\n",
+    "- 'Titular': Indica si el jugador fue titular en el partido.\n",
+    "- 'Mín 90 s': Representa los minutos jugados por el jugador.\n",
+    "- 'Gls.': Representa el número de goles marcados por el jugador.\n",
+    "- 'Ass': Representa el número de asistencias realizadas por el jugador.\n",
+    "- 'G+A': Representa la suma de goles y asistencias del jugador.\n",
+    "- 'G-TP': Representa el número de goles marcados desde el punto de penalti por el jugador.\n",
+    "- 'TP': Representa el número de penaltis lanzados por el jugador.\n",
+    "- 'TPint': Representa el número de penaltis convertidos por el jugador.\n",
+    "- 'TA': Representa el número de tarjetas amarillas recibidas por el jugador.\n",
+    "- 'TR': Representa el número de tarjetas rojas recibidas por el jugador.\n",
+    "- 'xG': Representa el valor esperado de goles del jugador.\n",
+    "- 'npxG': Representa el valor esperado de goles sin contar los goles de penalti del jugador.\n",
+    "- 'xAG': Representa el valor esperado de goles en contra del jugador.\n",
+    "- 'npxG+xAG': Representa la suma del valor esperado de goles sin contar los goles de penalti y el valor esperado de goles en contra del jugador.\n",
+    "- 'PrgC': Representa el número de pases completados por el jugador.\n",
+    "- 'PrgP': Representa el número de pases intentados por el jugador.\n",
+    "- 'PrgR': Representa el porcentaje de pases completados por el jugador.\n",
+    "- 'Gls90.': Representa el número de goles por cada 90 minutos jugados por el jugador.\n",
+    "- 'Ast90': Representa el número de asistencias por cada 90 minutos jugados por el jugador.\n",
+    "- 'G+A90': Representa la suma de goles y asistencias por cada 90 minutos jugados por el jugador.\n",
+    "- 'G-TP90': Representa el número de goles marcados desde el punto de penalti por cada 90 minutos jugados por el jugador.\n",
+    "- 'G+A-TP90': Representa la suma de goles y asistencias sin contar los goles de penalti por cada 90 minutos jugados por el jugador.\n",
+    "- 'xG90': Representa el valor esperado de goles por cada 90 minutos jugados por el jugador.\n",
+    "- 'xAG90': Representa el valor esperado de goles en contra por cada 90 minutos jugados por el jugador.\n",
+    "- 'xG+xAG90': Representa la suma del valor esperado de goles y el valor esperado de goles en contra por cada 90 minutos jugados por el jugador.\n",
+    "- 'npxG90': Representa el valor esperado de goles sin contar los goles de penalti por cada 90 minutos jugados por el jugador.\n",
+    "- 'npxG+xAG90': Representa la suma del valor esperado de goles sin contar los goles de penalti y el valor esperado de goles en contra por cada 90 minutos jugados por el jugador.\n",
+    "- 'Partidos': Representa el número de partidos jugados por el jugador.\n",
     "\n"
    ]
   },
