--- a/analisis/limpieza.ipynb
+++ b/analisis/limpieza.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4520,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4521,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4522,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4523,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4524,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4525,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +186,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(574, 7)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego vemos que tenemos 574 filas y 7 columnas que son:\n",
+    "\n",
+    "* 'Season': Temporada del equipo.\n",
+    "* 'Date': Fecha del partido.\n",
+    "* 'Home': Equipo local.\n",
+    "* 'Away': Equipo visitante.\n",
+    "* 'Round': Ronda de la competición\n",
+    "* 'Day': Día en el que se juega el partido\n",
+    "* 'Score': Puntuación (goles)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4526,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4527,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4528,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4529,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +572,7 @@
        "4     58,761  Vinicius Júnior-7  Thibaut Courtois   NaN  "
       ]
      },
-     "execution_count": 4529,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4530,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4531,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4532,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4533,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +670,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4533,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4534,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +834,7 @@
        "7  Leroy Sané,Eric Maxim Choupo-Moting       Yann Sommer                     4  "
       ]
      },
-     "execution_count": 4534,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4535,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +867,7 @@
        "(659, 15)"
       ]
      },
-     "execution_count": 4535,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4536,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1053,7 @@
        "7  Leroy Sané,Eric Maxim Choupo-Moting       Yann Sommer                     4  "
       ]
      },
-     "execution_count": 4536,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4537,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4538,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4539,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4540,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1371,7 @@
        "4                    4.0  "
       ]
      },
-     "execution_count": 4540,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4541,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4542,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1612,7 @@
        "4                    4.0  Germany  "
       ]
      },
-     "execution_count": 4542,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4543,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1672,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4543,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4544,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1708,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4544,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1689,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4545,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1744,13 +1779,12 @@
     "# Filtrar filas donde la columna Rk tiene el valor \"Squad\"\n",
     "squad_rows = df2[df2['Rk'] == 'Squad']\n",
     "print(squad_rows)\n",
-    "\n",
-    "\n"
+    "#Esto lo he hecho para ver que columnas me estaban fallando y poder corregirlas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4546,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4547,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1802,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4548,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1845,7 @@
        "(5221, 38)"
       ]
      },
-     "execution_count": 4548,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1823,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4549,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2055,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 4549,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4550,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2081,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4550,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4551,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2166,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4552,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2398,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 4552,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2375,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4553,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2456,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4554,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2654,7 +2688,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 4554,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2672,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4555,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2870,7 +2904,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 4555,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3035,7 +3069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4556,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3044,7 +3078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4557,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3058,7 +3092,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4557,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3077,7 +3111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4558,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3105,7 +3139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4561,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3148,7 @@
        "(5019, 37)"
       ]
      },
-     "execution_count": 4561,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3131,7 +3165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4560,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
