--- a/modelos/clustering.ipynb
+++ b/modelos/clustering.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "(5019, 37)"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "(5019, 13)"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "4  0.059524  0.015180    0.030361  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,13 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=10)\n",
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1934: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=3)\n",
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1966: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 3584 or by setting the environment variable OMP_NUM_THREADS=4\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_optics.py:995: RuntimeWarning: divide by zero encountered in divide\n",
+      "  ratio = reachability_plot[:-1] / reachability_plot[1:]\n",
       "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=10)\n",
       "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1934: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
@@ -425,8 +433,9 @@
     "# Configurar y ajustar K-Means\n",
     "\n",
     "# Aplicar diferentes algoritmos de clustering\n",
+    "\n",
     "algorithms = {\n",
-    "    'K-Means': KMeans(n_clusters=4, random_state=42),\n",
+    "    'K-Means': KMeans(n_clusters=4, random_state=42), \n",
     "    'Mean-Shift': MeanShift(),\n",
     "    'Mini-Batch K-Means': MiniBatchKMeans(n_clusters=4, random_state=42),\n",
     "    'DBSCAN': DBSCAN(eps=0.3, min_samples=5),\n",
@@ -454,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -552,17 +561,6 @@
     "    print(\", \".join(players))\n",
     "    print(\"\\n\")\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Cluster 0 (Verde): Dado que este cluster está alineado en el eje PC2 y alejado de otros clusters, podría representar jugadores con estadísticas defensivas excepcionales o porteros, cuyas estadísticas de juego son muy diferentes de las de los jugadores de campo.\n",
-    "\n",
-    "2. Clusters 1 (Azul) y 2 (Amarillo): Estos podrían representar jugadores con roles más ofensivos o equilibrados. Su cercanía sugiere perfiles estadísticos similares, tal vez mediocampistas y delanteros, con algunos sobresaliendo más en asistencias o goles esperados.\n",
-    "\n",
-    "3. Cluster 3 (Morado): La dispersión hacia valores más altos en PC1 podría indicar jugadores con un alto rendimiento ofensivo o aquellos que están involucrados frecuentemente en acciones que llevan a goles o asistencias, como delanteros estrella o mediocampistas ofensivos."
    ]
   }
  ],
