importamos todas las librerias necesarias

--- a/modelos/clasificacion.ipynb
+++ b/modelos/clasificacion.ipynb
@@ -1073,6 +1073,27 @@
     "\n",
     "Estos resultados ofrecen una visión basada en el análisis estadístico del rendimiento de los equipos hasta la fecha en la temporada actual. Es importante tener en cuenta que estas probabilidades son estimaciones basadas en datos históricos y rendimiento actual, y pueden cambiar a medida que avanza la competición y se disponga de más información."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Árbol de decisión\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Importamos todas las libreriasa necesarias\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
   }
  ],
  "metadata": {
