--- a/modelos/clasificacion.ipynb
+++ b/modelos/clasificacion.ipynb
@@ -1087,12 +1087,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importamos todas las libreriasa necesarias\n",
+    "# Importamos todas las libreriasa necesarias\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cargar los datos de equipos y jugadores\n",
+    "overall_df = pd.read_csv('../data/overall_limpio.csv') \n",
+    "jugadores_df = pd.read_csv('../data/jugadores_limpio.csv')"
    ]
   }
  ],
