preparamos los datos

--- a/modelos/clasificacion.ipynb
+++ b/modelos/clasificacion.ipynb
@@ -1105,6 +1105,21 @@
     "overall_df = pd.read_csv('../data/overall_limpio.csv') \n",
     "jugadores_df = pd.read_csv('../data/jugadores_limpio.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparamos los datos para el modelo\n",
+    "player_stats_summary = jugadores_df.groupby(['Temporada', 'Equipo']).agg(\n",
+    "    Total_Goals=('Gls.', 'sum'),  \n",
+    "    Total_Assists=('Ast90', 'mean'),  \n",
+    "    Total_xG=('xG90', 'mean'),\n",
+    "    Total_xA=('xAG90', 'mean')\n",
+    ").reset_index()"
+   ]
   }
  ],
  "metadata": {
