combinamos los datos

--- a/modelos/clasificacion.ipynb
+++ b/modelos/clasificacion.ipynb
@@ -1120,6 +1120,23 @@
     "    Total_xA=('xAG90', 'mean')\n",
     ").reset_index()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combinar los datos de jugadores con los datos del equipo\n",
+    "combined_data = pd.merge(overall_df, player_stats_summary, left_on=['Season', 'Squad'], right_on=['Temporada', 'Equipo'], how='inner')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
