combinamos datos y dividimos

--- a/modelos/clasificacion.ipynb
+++ b/modelos/clasificacion.ipynb
@@ -1128,7 +1128,23 @@
    "outputs": [],
    "source": [
     "# Combinar los datos de jugadores con los datos del equipo\n",
-    "combined_data = pd.merge(overall_df, player_stats_summary, left_on=['Season', 'Squad'], right_on=['Temporada', 'Equipo'], how='inner')\n"
+    "combined_data = pd.merge(overall_df, player_stats_summary, left_on=['Season', 'Squad'], right_on=['Temporada', 'Equipo'], how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparamos los datos para el modelo y lo dividimos \n",
+    "features_combined = ['W', 'D', 'L', 'GF', 'GA', 'GD', 'Pts', 'Total_Goals', 'Total_Assists', 'Total_xG', 'Total_xA']\n",
+    "X_combined = combined_data[features_combined]\n",
+    "le = LabelEncoder()\n",
+    "combined_data['Rk_encoded'] = le.fit_transform(combined_data['Rk'])\n",
+    "y_combined = combined_data['Rk_encoded']\n",
+    "X_train_combined, X_test_combined, y_train_combined, y_test_combined = train_test_split(X_combined, y_combined, test_size=0.2, random_state=42)\n",
+    "\n"
    ]
   },
   {
