--- a/modelos/clasificacion.ipynb
+++ b/modelos/clasificacion.ipynb
@@ -1078,7 +1078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Árbol de decisión\n"
+    "# Random Forest"
    ]
   },
   {
