Estamos identificando cada cluster

--- a/modelos/clustering2.ipynb
+++ b/modelos/clustering2.ipynb
@@ -121,8 +121,7 @@
     "scaler = StandardScaler()\n",
     "data_normalized = scaler.fit_transform(data_to_cluster)\n",
     "\n",
-    "# Aplicar KMeans\n",
-    "# El número de clusters se elige basado en el notebook de ejemplo, aunque este podría ajustarse según sea necesario\n",
+    "# Aplicar KMeans para agrupar los equipos en 3 clusters\n",
     "n_clusters = 3\n",
     "kmeans = KMeans(n_clusters=n_clusters, random_state=42)\n",
     "kmeans.fit(data_normalized)\n",
@@ -149,6 +148,71 @@
     "plt.legend(title='Cluster')\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(   Cluster                                              Squad\n",
+       " 0        0  [Eint Frankfurt, Ajax, Dinamo Zagreb, Juventus...\n",
+       " 1        1  [Manchester City, Inter, Real Madrid, Milan, B...\n",
+       " 2        2  [Chelsea, Liverpool, Paris S-G, Porto, RB Leip...,\n",
+       "    Cluster         MP         W         D         L         GF         GA  \\\n",
+       " 0        0   7.370130  1.435065  1.259740  4.675325   7.246753  15.344156   \n",
+       " 1        1  11.526012  6.317919  2.942197  2.335260  21.641618  11.127168   \n",
+       " 2        2   7.658147  2.814696  2.130990  2.712460  10.175719   9.904153   \n",
+       " \n",
+       "           GD        Pts  \n",
+       " 0  -8.097403   5.564935  \n",
+       " 1  10.514451  21.895954  \n",
+       " 2   0.271565  10.575080  )"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Crear un resumen de los equipos por cluster\n",
+    "clusters_summary = overall_df.groupby('Cluster')['Squad'].apply(list).reset_index()\n",
+    "\n",
+    "# Calcular estadísticas descriptivas por cluster para entender las diferencias entre ellos\n",
+    "clusters_stats = overall_df.groupby('Cluster')[columns_to_cluster].mean().reset_index()\n",
+    "\n",
+    "# Mostrar el resumen de equipos por cluster y las estadísticas descriptivas\n",
+    "clusters_summary, clusters_stats\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Basándonos en la información proporcionada, hemos identificado tres clusters distintos de equipos que participaron en la Champions League, cada uno con características únicas según su rendimiento. \n",
+    "\n",
+    "### Cluster 0\n",
+    "\n",
+    "* **Características Generales:** Este cluster agrupa a equipos con el menor rendimiento en general, con un promedio de partidos jugados, victorias, y puntos significativamente más bajos que los otros grupos. Además, estos equipos tienen una diferencia de goles negativa notable, indicando que han recibido más goles de los que han anotado.\n",
+    "\n",
+    "* **Equipos Ejemplo:** Eint Frankfurt, Ajax, Dinamo Zagreb, Juventus, entre otros. Estos equipos han tenido un desempeño menos favorable en la competición.\n",
+    "\n",
+    "### Cluster 1\n",
+    "\n",
+    "* **Características Generales:** Representa a los equipos con el mejor desempeño. Tienen el mayor número de partidos jugados, victorias, y puntos. Además, la diferencia de goles es positivamente alta, lo que indica un fuerte desempeño ofensivo y defensivo.\n",
+    "\n",
+    "* **Equipos Ejemplo:** Manchester City, Inter, Real Madrid, Milan, Bayern Munich, entre otros. Estos son los equipos más exitosos en el dataset, mostrando un fuerte desempeño que los coloca como potenciales favoritos para ganar el torneo.\n",
+    "\n",
+    "### Cluster 2\n",
+    "\n",
+    "* **Características Generales:** Este grupo está en un punto intermedio entre los otros dos clusters. Mientras que tienen un mejor rendimiento que los equipos del Cluster 0, no alcanzan los altos estándares del Cluster 1. La diferencia de goles es marginalmente positiva, indicando un equilibrio más ajustado entre goles a favor y en contra.\n",
+    "\n",
+    "* **Equipos Ejemplo:** Chelsea, Liverpool, Paris S-G, Porto, RB Leipzig, entre otros. Aunque estos equipos han mostrado capacidades competitivas, sus estadísticas indican que tienen áreas de mejora para alcanzar el nivel más alto de desempeño en la competición."
    ]
   },
   {
