--- a/modelos/regresion_lineal.ipynb
+++ b/modelos/regresion_lineal.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "  [5 rows x 37 columns]}}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -371,78 +371,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE: 0.41609098690585217, R^2: 0.6981921936663059\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.metrics import r2_score\n",
-    "\n",
-    "#Fusionamos datos de jugadores y equipo\n",
-    "\n",
-    "# Preparación de estadísticas agregadas de jugadores por equipo y temporada\n",
-    "jugadores_agregados = jugadores.groupby(['Temporada', 'Equipo']).agg({\n",
-    "    'Gls.': 'sum',\n",
-    "    'Ass': 'sum',\n",
-    "    'xG90': 'mean',\n",
-    "    'Ast90': 'mean'\n",
-    "}).reset_index()\n",
-    "\n",
-    "jugadores_agregados.rename(columns={\n",
-    "    'Gls.': 'Total_Goles_Jugadores',\n",
-    "    'Ass': 'Total_Asistencias_Jugadores',\n",
-    "    'xG90': 'Promedio_xG90_Jugadores',\n",
-    "    'Ast90': 'Promedio_Ast90_Jugadores'\n",
-    "}, inplace=True)\n",
-    "\n",
-    "# Fusionamos los datos de equipo ('overall') con los datos agregados de jugadores\n",
-    "# Corrección en la fusión de los conjuntos de datos para usar los nombres correctos de las columnas\n",
-    "datos_modelo = pd.merge(overall, jugadores_agregados, how='left', left_on=['Season', 'Squad'], right_on=['Temporada', 'Equipo'])\n",
-    "\n",
-    "# Seleccionamos las columnas relevantes para el modelo\n",
-    "datos_modelo_seleccionados = datos_modelo[['Rk_numerico', 'GF', 'GA', 'GD', 'Pts', 'Total_Goles_Jugadores', 'Total_Asistencias_Jugadores', 'Promedio_xG90_Jugadores', 'Promedio_Ast90_Jugadores']]\n",
-    "\n",
-    "# Limpieza de datos: Eliminamos filas donde 'Rk_numerico' es NaN\n",
-    "datos_modelo_limpio = datos_modelo_seleccionados.dropna(subset=['Rk_numerico'])\n",
-    "\n",
-    "# Preparación de los datos (X: características, Y: variable objetivo) con datos limpios\n",
-    "X_limpio = datos_modelo_limpio.drop('Rk_numerico', axis=1)\n",
-    "y_limpio = datos_modelo_limpio['Rk_numerico']\n",
-    "\n",
-    "# Imputación de valores faltantes en las características con la media\n",
-    "imputer = SimpleImputer(strategy='mean')\n",
-    "X_imputed_limpio = imputer.fit_transform(X_limpio)\n",
-    "\n",
-    "# División de los datos en conjuntos de entrenamiento y prueba\n",
-    "X_train_limpio, X_test_limpio, y_train_limpio, y_test_limpio = train_test_split(X_imputed_limpio, y_limpio, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Creación y entrenamiento del modelo de regresión lineal\n",
-    "modelo = LinearRegression()\n",
-    "modelo.fit(X_train_limpio, y_train_limpio)\n",
-    "\n",
-    "# Predicciones en el conjunto de prueba\n",
-    "y_pred_limpio = modelo.predict(X_test_limpio)\n",
-    "\n",
-    "# Evaluación del modelo\n",
-    "mse_limpio = mean_squared_error(y_test_limpio, y_pred_limpio)\n",
-    "r2_limpio = r2_score(y_test_limpio, y_pred_limpio)\n",
-    "\n",
-    "print(f'MSE: {mse_limpio}, R^2: {r2_limpio}')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -475,6 +403,94 @@
     "5. **Aplicabilidad Práctica:** Este estudio ofrece una base metodológica para equipos, entrenadores, y analistas que buscan entender y predecir el éxito en competiciones futbolísticas. Los insights derivados podrían ayudar en la toma de decisiones estratégicas, la preparación de partidos, y el scouting de jugadores.\n",
     "\n",
     "6. **Reflexión Final:** La modelización predictiva en el deporte es un campo complejo y dinámico, influenciado por numerosos factores dentro y fuera del campo. Mientras que los modelos estadísticos pueden ofrecer pronósticos y entender patrones, siempre deben complementarse con el conocimiento experto y el contexto específico del deporte."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.6239537746937489, R^2: 0.7440577963028068\n",
+      "El equipo con la mejor proyección para ganar o llegar a la final es: Liverpool con una categoría de predicción de 'F'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# Cargar los datos\n",
+    "jugadores_df = pd.read_csv('../data/jugadores_limpio.csv')\n",
+    "datos_champions_df = pd.read_csv('../data/datos_champions_limpio.csv')\n",
+    "overall_df = pd.read_csv('../data/overall_limpio.csv')\n",
+    "\n",
+    "# Transformar 'Rk' a una escala numérica en 'overall_df'\n",
+    "rank_conversion = {'W': 1, 'F': 2, 'SF': 3, 'QF': 4, 'R16': 5, 'GS': 6, 'R32': 7}\n",
+    "overall_df['Rk_numerico'] = overall_df['Rk'].map(rank_conversion)\n",
+    "\n",
+    "# Preparar estadísticas agregadas de jugadores por equipo y temporada\n",
+    "jugadores_agregados = jugadores_df.groupby(['Temporada', 'Equipo']).agg({\n",
+    "    'Gls.': 'sum',\n",
+    "    'Ass': 'sum',\n",
+    "    'xG90': 'mean',\n",
+    "    'Ast90': 'mean'\n",
+    "}).reset_index()\n",
+    "\n",
+    "# Renombrar columnas en 'jugadores_agregados' para claridad\n",
+    "jugadores_agregados.rename(columns={\n",
+    "    'Gls.': 'Total_Goles_Jugadores',\n",
+    "    'Ass': 'Total_Asistencias_Jugadores',\n",
+    "    'xG90': 'Promedio_xG90_Jugadores',\n",
+    "    'Ast90': 'Promedio_Ast90_Jugadores'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Fusionar 'overall_df' con 'jugadores_agregados' en un nuevo DataFrame 'datos_modelo'\n",
+    "datos_modelo = pd.merge(overall_df, jugadores_agregados, how='left', left_on=['Season', 'Squad'], right_on=['Temporada', 'Equipo'])\n",
+    "\n",
+    "# Seleccionar columnas relevantes para el modelo y eliminar filas con valores NaN\n",
+    "columnas_modelo = ['Rk_numerico', 'GF', 'GA', 'GD', 'Pts', 'Total_Goles_Jugadores', 'Total_Asistencias_Jugadores', 'Promedio_xG90_Jugadores', 'Promedio_Ast90_Jugadores']\n",
+    "datos_modelo_limpio = datos_modelo[columnas_modelo].dropna()\n",
+    "\n",
+    "# Preparar los datos para el entrenamiento del modelo\n",
+    "X = datos_modelo_limpio.drop('Rk_numerico', axis=1)\n",
+    "y = datos_modelo_limpio['Rk_numerico']\n",
+    "\n",
+    "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Entrenar un modelo de regresión lineal\n",
+    "modelo = LinearRegression()\n",
+    "modelo.fit(X_train, y_train)\n",
+    "\n",
+    "# Realizar predicciones en el conjunto de prueba\n",
+    "y_pred = modelo.predict(X_test)\n",
+    "\n",
+    "# Evaluar el modelo\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f'MSE: {mse}, R^2: {r2}')\n",
+    "\n",
+    "# Función para convertir las predicciones numéricas de vuelta a categorías de ranking\n",
+    "def numerico_a_categoria(prediccion):\n",
+    "    categorias = {1: 'W', 2: 'F', 3: 'SF', 4: 'QF', 5: 'R16', 6: 'GS', 7: 'R32'}\n",
+    "    return categorias.get(round(prediccion), \"Indefinido\")\n",
+    "\n",
+    "# Aplicar la función a las predicciones\n",
+    "predicciones_categorias = [numerico_a_categoria(pred) for pred in y_pred]\n",
+    "\n",
+    "# Identificar la mejor predicción (menor valor numérico)\n",
+    "mejor_prediccion_idx = y_pred.argmin()\n",
+    "mejor_equipo_prediccion = datos_modelo.iloc[X_test.index[mejor_prediccion_idx]]['Squad']\n",
+    "mejor_categoria_prediccion = predicciones_categorias[mejor_prediccion_idx]\n",
+    "\n",
+    "print(f\"El equipo con la mejor proyección para ganar o llegar a la final es: {mejor_equipo_prediccion} con una categoría de predicción de '{mejor_categoria_prediccion}'\")\n"
    ]
   }
  ],
