estamos haciendo el cluster k-means para jugadores y equipos

--- a/modelos/clustering.ipynb
+++ b/modelos/clustering.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Clustering por jugadores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "La idea es agrupar en cuatro grupos (cluster) los en función de sus características de juego (portero, defensa, central, delantero). El objetivo es analizar el rendimiento individual de los jugadores y su contribución al equipo."
    ]
   },
@@ -561,6 +568,13 @@
     "    print(\", \".join(players))\n",
     "    print(\"\\n\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering por Equipos\n"
    ]
   }
  ],
