--- a/modelos/clustering.ipynb
+++ b/modelos/clustering.ipynb
@@ -506,7 +506,7 @@
     "\n",
     "# Visualización opcional de los resultados de clustering para uno de los algoritmos\n",
     "# Selecciona un algoritmo de clustering para visualizar\n",
-    "algorithm_name = 'Agglomerative'  # Cambia esto por el nombre del algoritmo que quieres visualizar\n",
+    "algorithm_name = 'k-Means'  # Cambia esto por el nombre del algoritmo que quieres visualizar\n",
     "chosen_labels = labels_dict[algorithm_name]\n",
     "pca_df['Cluster'] = chosen_labels\n",
     "\n",
