separamos entre las redes que nos quedan hacer

--- a/modelos/Aprendizaje supervisado/regresion_lineal.ipynb
+++ b/modelos/Aprendizaje supervisado/regresion_lineal.ipynb
@@ -191,7 +191,7 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar los datos históricos\n",
-    "overall_df = pd.read_csv('../data/overall_limpio.csv')\n",
+    "overall_df = pd.read_csv('../../data/overall_limpio.csv')\n",
     "\n",
     "# Visualizar las primeras filas de cada DataFrame para entender su estructura\n",
     "overall_df_head = overall_df.head()\n",
